--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --config webpack.common.ts"
+  },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^4.0.3"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -25,7 +27,9 @@
     "eslint": "^7.9.0",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "file-loader": "^6.1.0",
     "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
