--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.ts"
+    "start": "webpack-dev-server --config webpack.dev.ts",
+    "build": "webpack --config webpack.prod.ts"
   },
   "dependencies": {
+    "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
+    "@types/terser-webpack-plugin": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "terser-webpack-plugin": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -32,6 +38,7 @@
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "ts-node": "^9.0.0",
