--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.ts",
-    "build": "webpack --config webpack.prod.ts"
+    "start": "webpack-dev-server --config ./config/webpack.dev.ts --open --hot",
+    "build": "webpack --config ./config/webpack.prod.ts"
   },
   "dependencies": {
     "@types/mini-css-extract-plugin": "^0.9.1",
