--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev.ts --open --hot",
-    "build": "webpack --config ./config/webpack.prod.ts"
+    "start": "webpack serve --config webpack.config.ts --mode=development",
+    "build": "webpack --config webpack.config.ts --mode=production"
   },
   "dependencies": {
-    "@types/mini-css-extract-plugin": "^0.9.1",
-    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-    "@types/terser-webpack-plugin": "^4.2.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "dotenv": "^8.2.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "terser-webpack-plugin": "^4.2.2"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -23,12 +19,14 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/mini-css-extract-plugin": "^1.2.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/webpack": "^4.41.22",
-    "@types/webpack-dev-server": "^3.11.0",
+    "@types/webpack": "^4.41.24",
+    "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "@webpack-cli/serve": "^1.0.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "eslint": "^7.9.0",
@@ -36,17 +34,16 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "html-webpack-plugin": "^4.4.1",
+    "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.4"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
