--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noEmit": true,
     "jsx": "react"
   },
+  "declaration": true,
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
